--- a/CSCLI/MainWindow.xaml
+++ b/CSCLI/MainWindow.xaml
@@ -1,12 +1,27 @@
-﻿<Window x:Class="CSCLI.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CSCLI"
+        xmlns:Properties="clr-namespace:CSCLI.Properties" xmlns:Models="clr-namespace:CSCLI.Models" x:Class="CSCLI.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="C# CLI" Height="350" Width="525" Background="Black" Loaded="Window_Loaded">
+    <Window.DataContext>
+        <Models:Settings/>
+    </Window.DataContext>
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="3*"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <GridSplitter Grid.Row="1" Height="2" HorizontalAlignment="Stretch" Margin="10,5,10,5">
+
+        </GridSplitter>
+        <Button x:Name="buttonUsings" Grid.Row="0" Content="Usings..." HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="80" Background="Black" Foreground="White" Click="buttonUsings_Click"/>
+        <Button x:Name="buttonReferences" Grid.Row="0" Content="References..." HorizontalAlignment="Left" Margin="120,10,0,0" VerticalAlignment="Top" Width="80" Background="Black" Foreground="White" Click="buttonReferences_Click"/>
+        <TextBox x:Name="textOutput" Grid.Row="0" Text="Type /? for help.&#x0a;&#x0a;" IsReadOnly="True" TextWrapping="Wrap" Background="Black" Margin="10,35,10,0" Foreground="White" Padding="5" VerticalScrollBarVisibility="Auto" />
+        <TextBox x:Name="textInput" Grid.Row="2" Background="Black" PreviewKeyDown="textInput_PreviewKeyDown" Foreground="White" AcceptsReturn="True" Margin="10,0,10,10" VerticalScrollBarVisibility="Auto"/>
     </Grid>
 </Window>
