--- a/CSCLI/MainWindow.xaml
+++ b/CSCLI/MainWindow.xaml
@@ -19,9 +19,10 @@
         <GridSplitter Grid.Row="1" Height="2" HorizontalAlignment="Stretch" Margin="10,5,10,5">
 
         </GridSplitter>
-        <Button x:Name="buttonUsings" Grid.Row="0" Content="Usings..." HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="80" Background="Black" Foreground="White" Click="buttonUsings_Click"/>
-        <Button x:Name="buttonReferences" Grid.Row="0" Content="References..." HorizontalAlignment="Left" Margin="120,10,0,0" VerticalAlignment="Top" Width="80" Background="Black" Foreground="White" Click="buttonReferences_Click"/>
-        <TextBox x:Name="textOutput" Grid.Row="0" Text="Type /? for help.&#x0a;&#x0a;" IsReadOnly="True" TextWrapping="Wrap" Background="Black" Margin="10,35,10,0" Foreground="White" Padding="5" VerticalScrollBarVisibility="Auto" />
+        <Button x:Name="buttonUsings" Grid.Row="0" Content="Usings..." HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="80" Background="Black" Foreground="White" Click="buttonUsings_Click" Height="25"/>
+        <Button x:Name="buttonReferences" Grid.Row="0" Content="References..." HorizontalAlignment="Left" Margin="120,10,0,0" VerticalAlignment="Top" Width="80" Background="Black" Foreground="White" Click="buttonReferences_Click" Height="25"/>
+        <Button x:Name="buttonClear" HorizontalAlignment="Right" VerticalAlignment="Top" Content="Clear Output" Background="Black" Foreground="White" Width="80" Margin="0,10,10,0" Height="25" Click="buttonClear_Click"></Button>
+        <TextBox x:Name="textOutput" Grid.Row="0" Text="Type /? for help.&#x0a;&#x0a;" IsReadOnly="True" Background="Black" Margin="10,40,10,0" Foreground="White" Padding="5" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" />
         <TextBox x:Name="textInput" Grid.Row="2" Background="Black" PreviewKeyDown="textInput_PreviewKeyDown" Foreground="White" AcceptsReturn="True" Margin="10,0,10,10" VerticalScrollBarVisibility="Auto"/>
     </Grid>
 </Window>
