--- a/CSCLI/MainWindow.xaml
+++ b/CSCLI/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:CSCLI"
         xmlns:Properties="clr-namespace:CSCLI.Properties" xmlns:Models="clr-namespace:CSCLI.Models" x:Class="CSCLI.MainWindow"
         mc:Ignorable="d"
-        Title="C# CLI" Height="350" Width="525" Background="Black" Loaded="Window_Loaded">
+        Title="C# CLI" Height="350" Width="525" Background="Black" Loaded="Window_Loaded" PreviewKeyDown="Window_PreviewKeyDown">
     <Window.DataContext>
         <Models:Settings/>
     </Window.DataContext>
@@ -19,9 +19,15 @@
         <GridSplitter Grid.Row="1" Height="2" HorizontalAlignment="Stretch" Margin="10,5,10,5">
 
         </GridSplitter>
-        <Button x:Name="buttonUsings" Grid.Row="0" Content="Usings..." HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="80" Background="Black" Foreground="White" Click="buttonUsings_Click" Height="25"/>
-        <Button x:Name="buttonReferences" Grid.Row="0" Content="References..." HorizontalAlignment="Left" Margin="120,10,0,0" VerticalAlignment="Top" Width="80" Background="Black" Foreground="White" Click="buttonReferences_Click" Height="25"/>
-        <Button x:Name="buttonClear" HorizontalAlignment="Right" VerticalAlignment="Top" Content="Clear Output" Background="Black" Foreground="White" Width="80" Margin="0,10,10,0" Height="25" Click="buttonClear_Click"></Button>
+        <Button x:Name="buttonUsings" Grid.Row="0" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="80" Background="Black" Foreground="White" Click="buttonUsings_Click" Height="25">
+            <TextBlock><Run Text="U" TextDecorations="Underline"/><Run Text="sings..."/></TextBlock>
+        </Button>
+        <Button x:Name="buttonReferences" Grid.Row="0" HorizontalAlignment="Left" Margin="120,10,0,0" VerticalAlignment="Top" Width="80" Background="Black" Foreground="White" Click="buttonReferences_Click" Height="25">
+            <TextBlock><Run Text="R" TextDecorations="Underline"/><Run Text="eferences..."/></TextBlock>
+        </Button>
+        <Button x:Name="buttonClear" HorizontalAlignment="Right" VerticalAlignment="Top" Background="Black" Foreground="White" Width="80" Margin="0,10,10,0" Height="25" Click="buttonClear_Click">
+            <TextBlock><Run Text="C" TextDecorations="Underline"/><Run Text="lear Output"/></TextBlock>
+        </Button>
         <TextBox x:Name="textOutput" Grid.Row="0" Text="Type /? for help.&#x0a;&#x0a;" IsReadOnly="True" Background="Black" Margin="10,40,10,0" Foreground="White" Padding="5" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" />
         <TextBox x:Name="textInput" Grid.Row="2" Background="Black" PreviewKeyDown="textInput_PreviewKeyDown" Foreground="White" AcceptsReturn="True" Margin="10,0,10,10" VerticalScrollBarVisibility="Auto"/>
     </Grid>
